--- a/search/index.html
+++ b/search/index.html
@@ -9,14 +9,14 @@
 <meta name="keywords" content="">
 <meta name="description" content="🔍搜索 - ✪ Mark Yang">
 <meta name="author" content="Sulv">
-<link rel="canonical" href="https://markyang.github.io/search/">
+<link rel="canonical" href="https://realmarkyang.github.io/search/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.css" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
 <script defer crossorigin="anonymous" src="/assets/js/search.js"></script>
-<link rel="icon" href="https://markyang.github.io/img/Q.jpg">
-<link rel="icon" type="image/png" sizes="16x16" href="https://markyang.github.io/img/Q.jpg">
-<link rel="icon" type="image/png" sizes="32x32" href="https://markyang.github.io/img/Q.jpg">
-<link rel="apple-touch-icon" href="https://markyang.github.io/img/Q.jpg">
-<link rel="mask-icon" href="https://markyang.github.io/img/Q.jpg">
+<link rel="icon" href="https://realmarkyang.github.io/img/Q.jpg">
+<link rel="icon" type="image/png" sizes="16x16" href="https://realmarkyang.github.io/img/Q.jpg">
+<link rel="icon" type="image/png" sizes="32x32" href="https://realmarkyang.github.io/img/Q.jpg">
+<link rel="apple-touch-icon" href="https://realmarkyang.github.io/img/Q.jpg">
+<link rel="mask-icon" href="https://realmarkyang.github.io/img/Q.jpg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
 <noscript>
@@ -74,7 +74,7 @@ var _hmt = _hmt || [];
 <meta property="og:title" content="🔍搜索" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://markyang.github.io/search/" /><meta property="article:section" content="" />
+<meta property="og:url" content="https://realmarkyang.github.io/search/" /><meta property="article:section" content="" />
 
 
 
@@ -92,7 +92,7 @@ var _hmt = _hmt || [];
       "@type": "ListItem",
       "position":  1 ,
       "name": "🔍搜索",
-      "item": "https://markyang.github.io/search/"
+      "item": "https://realmarkyang.github.io/search/"
     }
   ]
 }
@@ -118,14 +118,14 @@ var _hmt = _hmt || [];
   },
   "mainEntityOfPage": {
     "@type": "WebPage",
-    "@id": "https://markyang.github.io/search/"
+    "@id": "https://realmarkyang.github.io/search/"
   },
   "publisher": {
     "@type": "Organization",
     "name": "✪ Mark Yang",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://markyang.github.io/img/Q.jpg"
+      "url": "https://realmarkyang.github.io/img/Q.jpg"
     }
   }
 }
@@ -160,7 +160,7 @@ var _hmt = _hmt || [];
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://markyang.github.io/" accesskey="h" title="Blog (Alt + H)">Blog</a>
+            <a href="https://realmarkyang.github.io/" accesskey="h" title="Blog (Alt + H)">Blog</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -186,37 +186,37 @@ var _hmt = _hmt || [];
         </div>
         <ul id="menu">
             <li>
-                <a href="https://markyang.github.io/search" title="🔍 搜索 (Alt &#43; /)" accesskey=/>
+                <a href="https://realmarkyang.github.io/search" title="🔍 搜索 (Alt &#43; /)" accesskey=/>
                 <span class="active">🔍 搜索</span>
                 </a>
             </li>
             <li>
-                <a href="https://markyang.github.io/" title="🏠 主页">
+                <a href="https://realmarkyang.github.io/" title="🏠 主页">
                 <span>🏠 主页</span>
                 </a>
             </li>
             <li>
-                <a href="https://markyang.github.io/posts" title="📚 文章">
+                <a href="https://realmarkyang.github.io/posts" title="📚 文章">
                 <span>📚 文章</span>
                 </a>
             </li>
             <li>
-                <a href="https://markyang.github.io/tags" title="🧩 标签">
+                <a href="https://realmarkyang.github.io/tags" title="🧩 标签">
                 <span>🧩 标签</span>
                 </a>
             </li>
             <li>
-                <a href="https://markyang.github.io/archives/" title="⏱️ 时间轴">
+                <a href="https://realmarkyang.github.io/archives/" title="⏱️ 时间轴">
                 <span>⏱️ 时间轴</span>
                 </a>
             </li>
             <li>
-                <a href="https://markyang.github.io/about" title="🙋🏻‍♂️ 关于">
+                <a href="https://realmarkyang.github.io/about" title="🙋🏻‍♂️ 关于">
                 <span>🙋🏻‍♂️ 关于</span>
                 </a>
             </li>
             <li>
-                <a href="https://markyang.github.io/links" title="🤝 友链">
+                <a href="https://realmarkyang.github.io/links" title="🤝 友链">
                 <span>🤝 友链</span>
                 </a>
             </li>
@@ -242,7 +242,7 @@ var _hmt = _hmt || [];
         Copyright
         &copy;
         2023-2024 &nbsp&nbsp
-        <a href="https://markyang.github.io/" style="color:#939393;">✪ Mark Yang</a>
+        <a href="https://realmarkyang.github.io/" style="color:#939393;">✪ Mark Yang</a>
         
     </span>
 </footer>
