--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@ var _hmt = _hmt || [];
 </div>
 
         <div class="buttons">
-            <a class="button" href="posts/blog" rel="noopener" title="🧱 项目">
+            <a class="button" href="posts/blog" rel="noopener" title="🧱 项目1">
             <span class="button-inner">
-                    🧱 项目
+                    🧱 项目1
                 </span>
             </a>
             <a class="button" href="posts/tech" rel="noopener" title="👨🏻‍💻 技术">
