--- a/404.html
+++ b/404.html
@@ -9,13 +9,13 @@
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="Sulv">
-<link rel="canonical" href="https://realmarkyang.github.io/404.html">
+<link rel="canonical" href="https://realmarkyang.vercel.app/404.html">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.css" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://realmarkyang.github.io/img/Q.jpg">
-<link rel="icon" type="image/png" sizes="16x16" href="https://realmarkyang.github.io/img/Q.jpg">
-<link rel="icon" type="image/png" sizes="32x32" href="https://realmarkyang.github.io/img/Q.jpg">
-<link rel="apple-touch-icon" href="https://realmarkyang.github.io/img/Q.jpg">
-<link rel="mask-icon" href="https://realmarkyang.github.io/img/Q.jpg">
+<link rel="icon" href="https://realmarkyang.vercel.app/img/Q.jpg">
+<link rel="icon" type="image/png" sizes="16x16" href="https://realmarkyang.vercel.app/img/Q.jpg">
+<link rel="icon" type="image/png" sizes="32x32" href="https://realmarkyang.vercel.app/img/Q.jpg">
+<link rel="apple-touch-icon" href="https://realmarkyang.vercel.app/img/Q.jpg">
+<link rel="mask-icon" href="https://realmarkyang.vercel.app/img/Q.jpg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
 <noscript>
@@ -73,7 +73,7 @@ var _hmt = _hmt || [];
 <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://realmarkyang.github.io/404.html" />
+<meta property="og:url" content="https://realmarkyang.vercel.app/404.html" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
@@ -109,7 +109,7 @@ var _hmt = _hmt || [];
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://realmarkyang.github.io/" accesskey="h" title="Blog (Alt + H)">Blog</a>
+            <a href="https://realmarkyang.vercel.app/" accesskey="h" title="Blog (Alt + H)">Blog</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -135,37 +135,37 @@ var _hmt = _hmt || [];
         </div>
         <ul id="menu">
             <li>
-                <a href="https://realmarkyang.github.io/search" title="🔍 搜索 (Alt &#43; /)" accesskey=/>
+                <a href="https://realmarkyang.vercel.app/search" title="🔍 搜索 (Alt &#43; /)" accesskey=/>
                 <span>🔍 搜索</span>
                 </a>
             </li>
             <li>
-                <a href="https://realmarkyang.github.io/" title="🏠 主页">
+                <a href="https://realmarkyang.vercel.app/" title="🏠 主页">
                 <span class="active">🏠 主页</span>
                 </a>
             </li>
             <li>
-                <a href="https://realmarkyang.github.io/posts" title="📚 文章">
+                <a href="https://realmarkyang.vercel.app/posts" title="📚 文章">
                 <span>📚 文章</span>
                 </a>
             </li>
             <li>
-                <a href="https://realmarkyang.github.io/tags" title="🧩 标签">
+                <a href="https://realmarkyang.vercel.app/tags" title="🧩 标签">
                 <span>🧩 标签</span>
                 </a>
             </li>
             <li>
-                <a href="https://realmarkyang.github.io/archives/" title="⏱️ 时间轴">
+                <a href="https://realmarkyang.vercel.app/archives/" title="⏱️ 时间轴">
                 <span>⏱️ 时间轴</span>
                 </a>
             </li>
             <li>
-                <a href="https://realmarkyang.github.io/about" title="🙋🏻‍♂️ 关于">
+                <a href="https://realmarkyang.vercel.app/about" title="🙋🏻‍♂️ 关于">
                 <span>🙋🏻‍♂️ 关于</span>
                 </a>
             </li>
             <li>
-                <a href="https://realmarkyang.github.io/links" title="🤝 友链">
+                <a href="https://realmarkyang.vercel.app/links" title="🤝 友链">
                 <span>🤝 友链</span>
                 </a>
             </li>
@@ -181,7 +181,7 @@ var _hmt = _hmt || [];
         Copyright
         &copy;
         2023-2024 &nbsp&nbsp
-        <a href="https://realmarkyang.github.io/" style="color:#939393;">✪ Mark Yang</a>
+        <a href="https://realmarkyang.vercel.app/" style="color:#939393;">✪ Mark Yang</a>
         
     </span>
 </footer>
